--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Eqmis.github.io/lyrics-product",
+  "homepage": "https://eqmis.github.io/lyrics-product",
   "name": "lyrics-product",
   "version": "0.1.0",
   "private": true,
