--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://eqmis.github.io/lyrics-product",
+  "homepage": "https://eqmis.github.io/lyrics-product/",
   "name": "lyrics-product",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
